--- a/plugin/src/test/resources/rest-api-spec/test/ml/delete_model_snapshot.yml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/delete_model_snapshot.yml
@@ -44,8 +44,8 @@ setup:
   - do:
       index:
         index:  .ml-state
-        type:   model_state
-        id:     "delete-model-snapshot-inactive-snapshot#1"
+        type:   doc
+        id:     "delete-model-snapshot_model_state_inactive-snapshot#1"
         body: >
           {
             "state": "a"
@@ -54,8 +54,8 @@ setup:
   - do:
       index:
         index:  .ml-state
-        type:   model_state
-        id:     "delete-model-snapshot-inactive-snapshot#2"
+        type:   doc
+        id:     "delete-model-snapshot_model_state_inactive-snapshot#2"
         body: >
           {
             "state": "b"
@@ -117,9 +117,9 @@ setup:
   - do:
       count:
         index: .ml-state
-        type: model_state
+        type: doc
 
-  - match: { count: 2 }
+  - match: { count: 3 }
 
   - do:
       xpack.ml.delete_model_snapshot:
@@ -144,9 +144,9 @@ setup:
   - do:
       count:
         index: .ml-state
-        type: model_state
+        type: doc
 
-  - match: { count: 0 }
+  - match: { count: 1 }
 
 ---
 "Test delete with in-use model":
