--- a/plugin/src/test/resources/rest-api-spec/test/ml/jobs_get_result_buckets.yml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/jobs_get_result_buckets.yml
@@ -16,7 +16,7 @@ setup:
   - do:
       index:
         index:  .ml-anomalies-jobs-get-result-buckets
-        type:   result
+        type:   doc
         id:     "jobs-get-result-buckets_1464739200000_1"
         body:
           {
@@ -30,7 +30,7 @@ setup:
   - do:
       index:
         index:  .ml-anomalies-jobs-get-result-buckets
-        type:   result
+        type:   doc
         id:     "jobs-get-result-buckets_1470009600000_2"
         body:
           {
@@ -44,7 +44,7 @@ setup:
   - do:
       index:
         index:  .ml-anomalies-jobs-get-result-buckets
-        type:   result
+        type:   doc
         id:     "jobs-get-result-buckets_1470096000000_3"
         body:
           {
