--- a/plugin/src/test/resources/rest-api-spec/test/ml/jobs_get_result_categories.yml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/jobs_get_result_categories.yml
@@ -16,19 +16,19 @@ setup:
   - do:
       index:
         index:  .ml-anomalies-jobs-get-result-categories
-        type:   category_definition
+        type:   doc
         id:     jobs-get-result-categories-1
         body:   { "job_id": "jobs-get-result-categories", "category_id": 1 }
   - do:
       index:
         index:  .ml-anomalies-jobs-get-result-categories
-        type:   category_definition
+        type:   doc
         id:     jobs-get-result-categories-2
         body:   { "job_id": "jobs-get-result-categories", "category_id": 2 }
   - do:
       index:
         index:  .ml-anomalies-unrelated
-        type:   category_definition
+        type:   doc
         id:     jobs-get-result-categories-3
         body:   { "job_id": "unrelated", "category_id": 1 }
 
