--- a/plugin/src/test/resources/rest-api-spec/test/ml/jobs_get_result_records.yml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/jobs_get_result_records.yml
@@ -16,7 +16,7 @@ setup:
   - do:
       index:
         index:  .ml-anomalies-jobs-get-result-records
-        type:   result
+        type:   doc
         id:     jobs-get-result-records_1464739200000_1_1
         body:
           {
@@ -30,7 +30,7 @@ setup:
   - do:
         index:
           index:  .ml-anomalies-jobs-get-result-records
-          type:   result
+          type:   doc
           id:     jobs-get-result-records_1464825600000_1_2
           body:
             {
