--- a/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/old_cluster/20_security.yml
+++ b/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/old_cluster/20_security.yml
@@ -61,8 +61,8 @@
 ---
 "default password migration":
   - skip:
-      version: "5.0.0 - "
-      reason: https://github.com/elastic/x-pack-elasticsearch/issues/1523
+      version: " - 5.1.1"
+      reason: "the rest enabled action trips an assertion. see https://github.com/elastic/x-pack/pull/4443"
   # Check that enabling a user in old cluster will not prevent the user from having a "default password" in the new cluster.
   # See: org.elasticsearch.xpack.security.authc.esnative.NativeRealmMigrator.doConvertDefaultPasswords
   - do:
