Test: fix kibana user role works in mixed cluster on older versions
The kibana user role in mixed cluster test expects a old cluster test to have run first that would
disable the kibana user, but that test is not executed on 5.1.1 and prior versions. This change
makes a update request an upsert to account for this.

relates elastic/x-pack-elasticsearch#1527

Original commit: elastic/x-pack-elasticsearch@df2945610ea29f75e34aca90aefa415cc541483c

--- a/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/mixed_cluster/30_kibana_write.yml
+++ b/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/mixed_cluster/30_kibana_write.yml
@@ -12,12 +12,9 @@ setup:
         type: "reserved-user"
         id: "kibana"
         refresh: true
-        body: >
-          {
-            "doc": {
-              "enabled": true
-            }
-          }
+        body:
+          doc: { enabled: true, password: "" }
+          doc_as_upsert : true
   - do:
       xpack.security.clear_cached_realms:
         realms: "_all"
@@ -40,9 +37,6 @@ teardown:
         realms: "_all"
 ---
 "Verify kibana user role works in mixed cluster":
-  - skip:
-      version: "5.0.0 - "
-      reason: https://github.com/elastic/x-pack-elasticsearch/issues/1527
   - do:
       headers:
         Authorization: "Basic a2liYW5hOmNoYW5nZW1l"
