[ML] Add a detector_index field to detectors, and use it for updates (elastic/x-pack-elasticsearch#1613)
Detectors now have a field called detector_index.  This is also now the
field that needs to be supplied when updating a detector.  (Previously
it was simply index, which was confusing.)

When detectors are added to an analysis_config it will reassign
ascending detector_index values starting from 0.  The intention is
never to allow deletion of detectors from an analysis_config, but
possibly to allow disabling them in the future.  This ensures that
detector_index values in results will always tie up with detector_ids
in the detectors that created them.

relates elastic/x-pack-elasticsearch#1275

Original commit: elastic/x-pack-elasticsearch@20a660b07b7f86739ad8343d586891d720662e83

--- a/plugin/src/test/resources/rest-api-spec/test/ml/jobs_crud.yml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/jobs_crud.yml
@@ -218,10 +218,10 @@
         body:  >
           {
             "description":"Post update description",
-            "detectors": [{"index": 0, "rules": {"target_field_name": "airline",
+            "detectors": [{"detector_index": 0, "rules": {"target_field_name": "airline",
                                       "rule_conditions": [ { "condition_type": "numerical_actual",
                                                              "condition": {"operator": "gt", "value": "10" } } ] } },
-                          {"index": 1, "description": "updated description"}],
+                          {"detector_index": 1, "description": "updated description"}],
             "model_plot_config": {
               "enabled": false,
               "terms": "foobar"
@@ -245,7 +245,9 @@
   - match: { analysis_limits.model_memory_limit: 20 }
   - match: { analysis_config.categorization_filters: ["cat3.*"] }
   - match: { analysis_config.detectors.0.detector_rules.0.target_field_name: "airline" }
+  - match: { analysis_config.detectors.0.detector_index: 0 }
   - match: { analysis_config.detectors.1.detector_description: "updated description" }
+  - match: { analysis_config.detectors.1.detector_index: 1 }
   - match: { renormalization_window_days: 10 }
   - match: { background_persist_interval: "3h" }
   - match: { model_snapshot_retention_days: 30 }
