--- a/qa/smoke-test-ml-with-security/build.gradle
+++ b/qa/smoke-test-ml-with-security/build.gradle
@@ -30,6 +30,9 @@ integTestRunner {
     'ml/filter_crud/Test non-existing filter',
     'ml/get_datafeed_stats/Test get datafeed stats given missing datafeed_id',
     'ml/get_datafeeds/Test get datafeed given missing datafeed_id',
+    'ml/jobs_crud/Test cannot create job with existing categorizer state document',
+    'ml/jobs_crud/Test cannot create job with existing quantiles document',
+    'ml/jobs_crud/Test cannot create job with existing result document',
     'ml/jobs_crud/Test get job API with non existing job id',
     'ml/jobs_crud/Test put job with inconsistent body/param ids',
     'ml/jobs_get/Test get job given missing job_id',
