[ML] Add a write alias for persisting job results (elastic/x-pack-elasticsearch#1636)
This commit switches over to two index aliases per job: one for reading
and one for writing.  In the future this will allow the addition of a
rollover endpoint for ML results indices.  (Rollover is still not possible
following this change, but the change to make it possible in the future
should not be a breaking change now.)

Relates elastic/x-pack-elasticsearch#1599
relates elastic/x-pack-elasticsearch#827

Original commit: elastic/x-pack-elasticsearch@d648f4631f91af276488c5a4bb469ff29ed85fd3

--- a/plugin/src/test/resources/rest-api-spec/test/ml/jobs_crud.yml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/jobs_crud.yml
@@ -41,6 +41,16 @@
   - match: { jobs.0.job_id: "job-crud-test-apis" }
 
   - do:
+      indices.get_alias:
+        name: ".ml-anomalies-job-crud-test-apis"
+  - match: { \.ml-anomalies-shared.aliases.\.ml-anomalies-job-crud-test-apis.filter.term.job_id.value: job-crud-test-apis }
+
+  - do:
+      indices.get_alias:
+        name: ".ml-anomalies-.write-job-crud-test-apis"
+  - match: { \.ml-anomalies-shared.aliases.\.ml-anomalies-\.write-job-crud-test-apis: {} }
+
+  - do:
       xpack.ml.delete_job:
         job_id: "job-crud-test-apis"
   - match: { acknowledged: true }
@@ -48,6 +58,16 @@
   - do:
       indices.exists:
         index: ".ml-anomalies-job-crud-test-apis"
+  - is_false: ''
+
+  - do:
+      indices.exists_alias:
+        name: ".ml-anomalies-job-crud-test-apis"
+  - is_false: ''
+
+  - do:
+      indices.exists_alias:
+        name: ".ml-anomalies-.write-job-crud-test-apis"
   - is_false: ''
 
 ---
