--- a/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/upgraded_cluster/10_basic.yml
+++ b/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/upgraded_cluster/10_basic.yml
@@ -36,3 +36,34 @@
         index: test_index
 
  - match: { hits.total: 15 } # 10 docs from previous clusters plus 5 new docs
+
+---
+"Get indexed scroll and execute scroll":
+  - do:
+      get:
+        index: scroll_index
+        type: doc
+        id: 1
+
+  - set: {_source.value: scroll_id}
+
+  - do:
+      scroll:
+        scroll_id: $scroll_id
+        scroll: 1m
+
+  - match: {hits.total:      2    }
+  - length: {hits.hits:      1    }
+  - match: {hits.hits.0._id: "43" }
+
+  - do:
+      scroll:
+        scroll_id: $scroll_id
+        scroll: 1m
+
+  - match: {hits.total:      2    }
+  - length: {hits.hits:      0    }
+
+  - do:
+      clear_scroll:
+        scroll_id: $scroll_id
