--- a/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/old_cluster/20_security.yml
+++ b/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/old_cluster/20_security.yml
@@ -48,8 +48,8 @@
 
   - do:
       cluster.health:
-        index: ".monitoring-*" # include monitoring-data-* and monitoring-es-*
-        wait_for_active_shards: 4 # 1 primary and 1 replica each for the two monitoring indices
+        index: ".monitoring-*" # include monitoring-es-*
+        wait_for_active_shards: 4 # 1 primary and 1 replica
         timeout: 25s
 
   - do:
