--- a/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/old_cluster/10_basic.yml
+++ b/qa/rolling-upgrade/src/test/resources/rest-api-spec/test/old_cluster/10_basic.yml
@@ -36,6 +36,6 @@
 
  - do:
      cluster.health:
-        index: ".monitoring-*" # include monitoring-es-*
+        index: ".monitoring-es-*"
         wait_for_active_shards: 2 # 1 primary and 1 replica
         timeout: 25s
