--- a/plugin/src/test/resources/rest-api-spec/test/ml/jobs_crud.yml
+++ b/plugin/src/test/resources/rest-api-spec/test/ml/jobs_crud.yml
@@ -662,3 +662,21 @@
             "data_description" : {
             }
           }
+
+---
+"Test cannot create job with model snapshot id set":
+
+  - do:
+      catch: /illegal_argument_exception/
+      xpack.ml.put_job:
+        job_id: has-model-snapshot-id
+        body:  >
+          {
+            "model_snapshot_id": "wont-create-with-this-setting",
+            "analysis_config" : {
+                "bucket_span": "1h",
+                "detectors" :[{"function":"metric","field_name":"responsetime","by_field_name":"airline"}]
+            },
+            "data_description" : {
+            }
+          }
